[package]
name = "ziee"
description = "Ziee Server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# Local proc-macro crates
macros = { path = "./macros" }

# SDK foundation crate (git submodule at sdk/). Holds AppError/ApiResult, the
# core macros (sse_event_enum! etc.), and base app-state globals — consumed
# here via equivalence-preserving re-export shims (decision N2).
ziee-core = { path = "../../sdk/crates/ziee-core" }

# SDK identity ABSTRACTIONS (Chunk B1b): the PermissionCheck/PermissionList
# traits, the generic RBAC evaluator (check_permissions_array), and the
# Principal + TokenVerifier interfaces — consumed here via equivalence-preserving
# re-export shims + trait impls (decision N2). Concrete User/Group/JwtService
# stay in ziee and implement the traits.
ziee-identity = { path = "../../sdk/crates/ziee-identity" }

# SDK module machinery (Chunk B2): AppModule / ModuleContext / ModuleEntry /
# MODULE_ENTRIES (the linkme slice) + app_builder (create_modules /
# build_api_router / CORS + rate-limit) + the domain-free EventHandler trait —
# consumed here via equivalence-preserving re-export shims (decision N2). ziee's
# monolithic Config composes ziee_core::ServerConfig; ModuleContext carries the
# ServerConfig, with the full Config injected through the opaque app_config slot.
ziee-framework = { path = "../../sdk/crates/ziee-framework" }

# SDK default auth module (Chunk BA): owns the concrete User/Group/Session wire
# types + (progressively) the auth queries/routes/migrations. Consumed here via
# equivalence-preserving re-export shims (decision N2) — schemars keys types by
# short ident, so moving the defining crate leaves the wire schemas unchanged.
ziee-auth = { path = "../../sdk/crates/ziee-auth" }
# Chunk C1: the DB-free control tool-dispatch core (OpenAPI→catalog ingest, the
# reachability/mutation policy, the three control-tool descriptors). ziee's
# `control_mcp` module re-exports `catalog`/`policy`/`tools` from here and keeps
# the app-side handlers/routes/repository/chat_extension (decisions N1/N5).
ziee-control-mcp = { path = "../../sdk/crates/ziee-control-mcp" }
# Infra chunks (health/hardware/server-update/notification): four clean,
# domain-agnostic modules lifted into their own SDK crates. ziee keeps each
# module's `AppModule`/`MODULE_ENTRIES` registration + the aide/axum boundary
# (handlers/routes that bind ziee's concrete permission resolver + `module_api`)
# and re-exports the moved DB-free cores as equivalence-preserving shims.
# `ziee-notification` additionally carries the module's own migrations (globbed
# into the app's merged set from `sdk/crates/*/migrations/`).
ziee-health = { path = "../../sdk/crates/ziee-health" }
ziee-hardware = { path = "../../sdk/crates/ziee-hardware" }
# Build-DB-free sandbox ENGINE (bwrap hardening core + backend seam + mount
# registry + resource-limits types), injected back into the retained DB/HTTP
# halves via the three provider seams. `code_sandbox_seccomp` forwards to the
# engine's feature (which owns the `sandbox-seccomp` static link).
ziee-sandbox = { path = "../../sdk/crates/ziee-sandbox" }
ziee-server-update = { path = "../../sdk/crates/ziee-server-update" }
ziee-notification = { path = "../../sdk/crates/ziee-notification" }
# `ziee-onboarding` — the generic guide/step completion tracker. Owns the
# `user_onboarding` table migration (globbed into the merged set), the
# `OnboardingProgress` wire type, AND the schema-bound repository (its own build
# DB). ziee keeps the sync-coupled handlers/routes/registration + the FK migration.
ziee-onboarding = { path = "../../sdk/crates/ziee-onboarding" }
# `ziee-file` — the generic multi-derivative blob STORE (models/storage/
# repository/types/utils/permissions/seams). Carries the base `files`/
# `file_versions` migration (globbed into the merged set). ziee keeps the
# domain processing/handlers/routes + re-export shim in `modules::file`.
ziee-file = { path = "../../sdk/crates/ziee-file" }

# Lexical search for the files MCP grep tool (already in the lockfile transitively).
regex = "1"

# Inherited from workspace catalog — bumping happens in
# `src-app/Cargo.toml::[workspace.dependencies]`.
serde.workspace = true
serde_json.workspace = true
# Order-preserving map for the OpenAPI→types.ts generator (emit_ts.rs). The TS
# generator relies on JSON object insertion order; plain serde_json::Value would
# alphabetize (BTreeMap), so we deserialize the spec into an IndexMap-backed value.
indexmap = { version = "2", features = ["serde"] }
toml.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
aide.workspace = true
schemars.workspace = true
once_cell.workspace = true
paste.workspace = true
libc.workspace = true
# Embedded JS runtime for the js_tool / run_js built-in (see workspace catalog).
rquickjs.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
async-stream.workspace = true
serde_norway.workspace = true
sqlx.workspace = true
postgresql_embedded.workspace = true
portpicker.workspace = true
pgvector.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
croner.workspace = true
uuid.workspace = true
dirs.workspace = true
rand.workspace = true
clap.workspace = true
hex.workspace = true
include_dir.workspace = true
base64.workspace = true
sha2.workspace = true
semver.workspace = true
url.workspace = true
http.workspace = true
tempfile.workspace = true
mime_guess.workspace = true
which.workspace = true
tar.workspace = true
# Engine-binary archive extraction (folded in from the llm-runtime crate's
# binary downloader): tar.gz via flate2 + zip for the Windows path. Also
# used by the hub catalog tarball unpack (modules/hub/hub_manager.rs).
flate2.workspace = true
zstd.workspace = true
lazy_static.workspace = true
futures-util.workspace = true
futures.workspace = true
# `json` (catch-all parser for SSE/REST) and `blocking` (used by the
# embedded-postgres startup probe) are added on top of the workspace's
# rustls-tls + charset + http2 baseline.
reqwest = { workspace = true, features = ["json", "blocking", "stream", "multipart"] }
# web_search page fetch: readability-style extraction + HTML→markdown.
dom_smoothie.workspace = true
htmd.workspace = true
# lit_search: parse arXiv's Atom XML feed (already in the lock, transitive).
quick-xml = "0.37"

# Server-specific deps (not shared, kept local)
tower_governor = "0.7"
# tower-sessions is pulled transitively by axum-login. Direct declaration
# is redundant but currently load-bearing for sqlx's feature resolver
# (removing it makes sqlx prefer chrono::DateTime over
# time::OffsetDateTime as the timestamp type, which cascades into ~80
# type errors across repositories). Audit's 14-core F-07 marks both
# this and tower-sessions-sqlx-store as unused — they are at the
# source level, but the transitive feature contribution is real.
# A clean removal requires a coordinated `s/OffsetDateTime/DateTime<Utc>/`
# sweep across every repository; tracked as a follow-up.
tower-sessions = "0.14.0"
tower-sessions-sqlx-store = { version = "0.15.0", features = ["postgres"] }
axum-login = "0.18.0"
linkme = "0.3"
dashmap = "6"
config = "0.15.18"

# (ngrok dep moved to desktop/tauri/Cargo.toml — the remote_access
# module that uses it lives entirely in the desktop crate now.)

# Utilities
time = "0.3"
bcrypt = "0.17.1"

# Git/LFS utilities. `vendored-openssl` statically links openssl into
# the binary so a target machine doesn't need a system openssl dylib;
# `vendored-libgit2` does the same for libgit2 itself. Combined with
# the reqwest/ldap3/sigstore rustls switch below, the server binary
# has zero external TLS/crypto runtime deps.
git2 = { version = "0.20.2", default-features = false, features = ["https", "vendored-openssl", "vendored-libgit2"] }

# File processing
image = "0.25"
imageproc = "0.25"
ab_glyph = "0.2"
encoding_rs = "0.8"
pdfium-render = "0.8"
pdf-extract = "0.12"
calamine = "0.31.0"
# Zip walker for decompression-bomb pre-validation on OOXML files
# (DOCX/XLSX/PPTX). See modules/file/utils/zipbomb. Closes 05-file F-05.
zip = "6.0.0"

# Hardware monitoring (the retained aide/axum handlers still read sysinfo for
# static CPU/mem info). The GPU-detection libs (nvml/opencl/ash/wgpu-hal) moved
# with `detection.rs` into `ziee-hardware`, behind ITS `gpu-detect` feature,
# which ziee's own `gpu-detect` feature forwards to (see [features] below).
sysinfo = "0.37.2"

# Auth providers
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }
# `sync` dropped: callers use LdapConnAsync exclusively. `tls-rustls-ring`
# brings the ring crypto provider explicitly (without it the rustls
# default-provider runtime check fails on first connect).
ldap3 = { version = "0.12.1", default-features = false, features = ["tls-rustls-ring"] }
oauth2 = "5.0.0"
openidconnect = "4.0.1"
sigstore = { version = "0.14", default-features = false, features = ["bundle", "sigstore-trust-root", "rustls-tls"] }

# AI providers (local package)
ai-providers = { path = "./ai-providers" }

# MCP client
rmcp = { version = "1.4", features = ["client", "transport-child-process"] }
# E5: full JSON-Schema validation of elicit submissions. default-features off
# drops the remote-`$ref` HTTP/file resolvers (no SSRF surface during form
# validation) — elicit schemas are self-contained.
jsonschema = { version = "0.46.5", default-features = false }

[lib]
name = "ziee"
path = "src/lib.rs"

[[bin]]
name = "ziee"
path = "src/main.rs"

[[example]]
name = "mock-sampling-server"
path = "tests/mcp/examples/mock_sampling_server.rs"

[features]
# `code_sandbox_seccomp` is on by default. The `sandbox-seccomp` dep
# (which links `libseccomp`) is target-conditional (Linux-only — see
# `[target.…]` below), so non-Linux builds resolve the feature to a no-op
# and the `#[cfg(all(feature = "…", target_os = "linux"))]`-gated code path
# simply isn't compiled. Operators get the syscall-level defense-in-depth
# out of the box on Linux without flipping any build flag; Mac/Windows
# builds compile cleanly with no manual `--no-default-features` dance.
# The seccomp policy itself lives in the shared `sandbox-seccomp` crate so
# the in-VM guest agent applies an identical filter.
default = ["gpu-detect", "code_sandbox_seccomp"]
gpu-detect = ["ziee-hardware/gpu-detect"]
# The seccomp code moved to the `ziee-sandbox` engine with the carve, so the
# server feature now FORWARDS to the engine's `code_sandbox_seccomp` (which owns
# the Linux-gated optional `sandbox-seccomp` static link). Non-Linux builds
# resolve it to an inert no-op exactly as before. `sandbox-seccomp` +
# `sandbox-vm-protocol` are no longer named by any retained server file — the
# engine depends on them directly, and the server gets them transitively.
code_sandbox_seccomp = ["ziee-sandbox/code_sandbox_seccomp"]

# Windows: AF_HYPERV / SOCKADDR_HV bindings so the WSL2 backend can dial the
# in-distro agent over the Hyper-V vsock instead of `127.0.0.1` — closing the
# cross-distro reachability gap (HIGH-1 of .sec-audits/wsl2-source-deep-read-).
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Networking_WinSock",
    # Named-pipe IPC for the LocalSystem sandbox-helper service: create the
    # pipe with an SDDL security descriptor (Authorization), accept/connect
    # (Pipes), and the backing file handle (Storage_FileSystem).
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
    # ConnectNamedPipe's signature references OVERLAPPED, so windows-sys gates
    # it behind the IO feature too.
    "Win32_System_IO",
    # GetExtendedTcpTable + MIB_TCP*TABLE_OWNER_PID rows for the Windows twin
    # of verify_loopback_bind (assert a spawned engine bound 127.0.0.1/::1, not
    # 0.0.0.0). See llm_local_runtime/deployment/local.rs.
    "Win32_NetworkManagement_IpHelper",
] }
# Windows service scaffolding for the LocalSystem sandbox-helper: SCM
# dispatcher + install/uninstall. The helper resolves the WSL utility VM's
# VmId (needs Hyper-V Admin / SYSTEM) and registers the vsock GUIDs (HKLM
# write) so the unprivileged server never needs those rights — mirrors how
# Docker Desktop brokers privileged WSL work through a LocalSystem service.
windows-service = "0.7"
# Safe HKLM access for the GuestCommunicationServices vsock-port registration.
winreg = "0.52"

[build-dependencies]
# Chunk sdk-batteries (decision #11): the SDK's build.rs support — module-owned
# migration composition + per-worktree build-DB keying/provisioning. Lean +
# build-DB-free, so it's cheap as a build-dependency. Replaces the former inline
# `compose_merged_migrations()` + `#[path]`-included `build_helper/worktree_db.rs`.
ziee-build-support = { path = "../../sdk/crates/ziee-build-support" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
sqlx.workspace = true
ureq = "3.1.4"
zip.workspace = true
flate2.workspace = true
tar.workspace = true
# zstd for the mac sandbox-runtime bundle (level-19 compression).
zstd.workspace = true
# Pure-Rust XZ decoder for the typst binary archives. typst publishes
# Linux/macOS releases as .tar.xz (Windows is .zip). lzma-rs is pure
# Rust so the build doesn't gain a system xz-utils dependency.
lzma-rs = "0.3"
# Build-time fetch + verification of the ziee-ai/hub catalog
# (see build_helper/hub_seed.rs). Same `sigstore` feature set as
# the runtime crate so the build-time cosign chain matches the
# runtime refresh chain bit-for-bit. `sha2`/`serde`/`serde_json`
# are needed for the sha256 sidecar check + GhRelease JSON parsing.
# `fs2` provides the cross-process advisory lock that serializes
# concurrent cargo builds racing to rotate the seed cache.
sigstore = { version = "0.14", default-features = false, features = ["bundle", "sigstore-trust-root", "rustls-tls"] }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fs2 = "0.4"

[dev-dependencies]
# Chunk ziee-test-harness: the generic spawn/isolation/DB-clone/Drop engine of
# the integration harness moved to the SDK's ziee-test-harness crate (it
# re-exports ziee-build-support's worktree_db, so the per-worktree test-DB
# suffix derivation stays identical to build.rs).
ziee-test-harness = { path = "../../sdk/crates/ziee-test-harness" }
mockall.workspace = true
tempfile.workspace = true
serial_test.workspace = true
# Test fixtures build a .tar.gz on the fly (MockReleaseServer packaging the
# stub-engine as a release artifact). `tar`, `sha2`, `hex` are already in the
# main [dependencies]; flate2 is only a build-dependency, so re-declare it here.
flate2.workspace = true
# Tests need `cookies` (browser-like session round-trips) on top of the
# workspace baseline (rustls-tls + charset + http2) plus `json` +
# `multipart` for request bodies.
reqwest = { workspace = true, features = ["json", "cookies", "multipart", "blocking"] }
uuid.workspace = true
rand.workspace = true
serde_norway.workspace = true
sqlx.workspace = true
postgresql_embedded.workspace = true
testcontainers = "0.27.3"
wiremock = "0.6"
rsa = { version = "0.9", features = ["pem"] }
