[package]
name = "ziee-desktop"
version = "0.1.0"
description = "Ziee Chat Desktop Application"
authors = ["Ziee Team"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.4", features = [] }

[dependencies]
# Tauri framework
tauri = { version = "2.8", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-decorum = "1.1.1"

# Backend server (embedded as library)
ziee = { path = "../../server" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Config generation
serde_yaml = "0.9"
rand = "0.9"

# Desktop repository system
paste = "1.0"
once_cell = "1.21"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "migrate"] }
axum = "0.8"

# HTTP client for Vite proxy (development mode)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

# Static file embedding for production mode
rust-embed = "8"
mime_guess = "2"

# CLI parsing
clap = { version = "4", features = ["derive"] }

# OpenAPI schema generation (must match server version)
schemars = { version = "0.9.0", features = ["chrono04", "uuid1"] }
aide = { version = "0.15", features = ["axum"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
serial_test = "3"
reqwest = "0.12"
serde_json = "1.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
