[package]
name = "ziee-desktop"
description = "Ziee Desktop Application"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.4", features = [] }

[dependencies]
# Tauri framework (desktop-only, kept local)
tauri = { version = "2.8", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-decorum = "1.1.1"

# Backend server (embedded as library)
ziee = { path = "../../server" }

# Inherited from `src-app/Cargo.toml::[workspace.dependencies]`.
# sqlx in particular MUST match ziee's so pgvector (`>= 0.8, < 0.10`)
# unifies onto one sqlx version — the workspace's single resolver pass
# guarantees this, replacing the per-crate lock-file pin we used to
# need.
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
rand.workspace = true
paste.workspace = true
once_cell.workspace = true
sqlx.workspace = true
axum.workspace = true
reqwest.workspace = true
rust-embed = "8"
mime_guess.workspace = true
clap.workspace = true
schemars.workspace = true
aide.workspace = true

# Remote access — built-in ngrok client. Used by
# modules/remote_access/tunnel.rs (NgrokDriver). Wrapped behind the
# `TunnelDriver` trait so the integration tests substitute a mock
# (no real ngrok needed for Tier 1-7).
ngrok = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
url = { workspace = true }
uuid.workspace = true
bcrypt = "0.17.1"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile.workspace = true
serial_test.workspace = true
reqwest.workspace = true
serde_json.workspace = true
# Used by integration_tests/common/ — the test harness uses sqlx to
# create per-test databases and seed group/permission rows for the
# remote-access integration tests that moved here from server/tests/.
sqlx = { workspace = true, features = ["postgres", "runtime-tokio", "macros"] }
portpicker.workspace = true
url.workspace = true
# Updater signing round-trip test (`tests/updater_signing_test.rs`):
# verify a `tauri signer`-produced signature with the SAME crate the
# runtime updater uses to verify downloaded updates.
minisign-verify = "0.2"
# Pull in `tauri::test::{mock_builder, get_ipc_response, ...}` for
# Layer-1 command tests (`tests/tauri_commands_test.rs`). Without the
# `test` feature, `tauri::test` is gated behind `#[cfg(test)]` on the
# tauri crate itself — invisible to downstream `cargo test`.
tauri = { version = "2.8", features = ["tray-icon", "test"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
