[package]
name = "ai-providers"
version = "0.1.0"
edition = "2021"
authors = ["Ziee Team"]
description = "Unified interface for multiple AI provider APIs (OpenAI, Anthropic, Gemini)"
license = ""

[dependencies]
# All providers now use custom HTTP implementations (no external provider libraries)

# Core async runtime
tokio = { version = "1.47.1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }

# Error handling
thiserror = "2.0.12"

# Streaming
futures-core = "0.3"
futures-util = "0.3"
async-stream = "0.3"

# Base64 encoding (for file attachments)
base64 = "0.22"

# Date/time handling (for file expiration)
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
dotenv = "0.15"
