[package]
name = "macros"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "parsing", "printing", "visit"] }
quote = "1.0"
proc-macro2 = "1.0"

[build-dependencies]
walkdir = "2.5"
syn = { version = "2.0", features = ["full", "parsing"] }
quote = "1.0"
