[package]
name = "llamacpp-builder"
version = "0.1.0"
edition = "2021"
description = "Build helper for llama.cpp engine"

[dependencies]
# No runtime dependencies needed - all logic is in build.rs

[build-dependencies]
# None needed - we'll use std::process::Command directly

[lib]
name = "llamacpp_builder"
path = "src/lib.rs"
